--- a/paginaprueva.html
+++ b/paginaprueva.html
@@ -6,13 +6,13 @@
     <title>PaginaTiendaPlaceholder</title>
 
     <!-- CSS DE LOS COMPONENTES PRINCIPALES DE LA PÁGINA -->
-    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="estiloprueva.css">
 
     <!-- ESTILOS GENERALES Y BASE -->
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="estiloprueva.css">
 
     <!-- CSS DEL CONTENIDO DE CADA PÁGINA ESPECÍFICO -->
-    <link rel="stylesheet" href="assets/css/pages/index.css">
+    <link rel="stylesheet" href="estiloprueva.css">
 
     <!-- FAVICON -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
