--- a/paginaprueva.html
+++ b/paginaprueva.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PaginaTiendaPlaceholder</title>
+    <title>Tema</title>
 
     <!-- CSS DE LOS COMPONENTES PRINCIPALES DE LA PÁGINA -->
     <link rel="stylesheet" href="estiloprueva.css">
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="logo">
                 <i class="bi bi-shop"></i>
-                <span>Sa Colomina Store</span>
+                <span>Tema</span>
             </div>
 
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
@@ -47,7 +47,7 @@
                     <li><a href="./index.html"><i class="bi bi-house"></i><span>Inicio</span></a></li>
                     <li><a href="./pages/about.html"><i class="bi bi-person-raised-hand"></i><span>About</span></a></li>
                     <li><a href="./pages/login.html"><i class="bi bi-door-open"></i><span>Login</span></a></li>
-                    <li><a href="./pages/registro.html"><i class="bi bi-box-arrow-in-right"></i><span>SignUp</span></a></li>
+                    <li><a href="./Inicio_sesion.html"><i class="bi bi-box-arrow-in-right"></i><span>SignUp</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -64,7 +64,7 @@
     </div>
 
     <footer>
-        <p>&copy; PaginaTiendaPlaceholder - Todos los derechos reservados.</p>
+        <p>&copy; Tema - Todos los derechos reservados.</p>
         <nav>
             <a href="./pages/aviso-legal.html">Privacidad</a> | 
             <a href="./pages/cookies.html">Cookies</a>
