links pagina prueva1

--- a/paginaprueva.html
+++ b/paginaprueva.html
@@ -44,7 +44,7 @@
 
             <nav class="nav">
                 <ul class="nav-list">
-                    <li><a href="./index.html"><i class="bi bi-house"></i><span>Inicio</span></a></li>
+                    <li><a href="./paginaprueva.html"><i class="bi bi-house"></i><span>Inicio</span></a></li>
                     <li><a href="./pages/about.html"><i class="bi bi-person-raised-hand"></i><span>About</span></a></li>
                     <li><a href="./pages/login.html"><i class="bi bi-door-open"></i><span>Login</span></a></li>
                     <li><a href="./Inicio_sesion.html"><i class="bi bi-box-arrow-in-right"></i><span>SignUp</span></a></li>
