--- a/Inicio_sesion.html
+++ b/Inicio_sesion.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio de Sesión</title>
+    <link rel="stylesheet" href="Inicio_sesion.css">
 </head>
 <body>
-
 
 <h1>Iniciar Sesión</h1>
 <form method="POST" action="https://ejercicio.2.6.3.com/login">
@@ -20,9 +20,7 @@
         Contraseña:<br>
         <input type="password" name="contrasena" required>
     </label>
-    <br><br>
-
-
+    <br>
     <label>
         <input type="checkbox" name="recordar">
         Recordar
