--- a/paginaprueva.html
+++ b/paginaprueva.html
@@ -62,6 +62,55 @@
             <!-- Contenido principal -->
         </main>
     </div>
+    <section class="products">
+    <div class="products-grid">
+
+        <article class="product-card">
+            <div class="product-image"></div>
+            <div class="product-info">
+                <h3 class="product-title">Producto</h3>
+                <p class="product-description">Descripción breve del producto</p>
+                <div class="product-footer">
+                    <span class="product-price">$00.00</span>
+                    <button class="product-btn">
+                        <i class="bi bi-cart-plus"></i>
+                    </button>
+                </div>
+            </div>
+        </article>
+
+        <article class="product-card">
+            <div class="product-image"></div>
+            <div class="product-info">
+                <h3 class="product-title">Producto</h3>
+                <p class="product-description">Descripción breve del producto</p>
+                <div class="product-footer">
+                    <span class="product-price">$00.00</span>
+                    <button class="product-btn">
+                        <i class="bi bi-cart-plus"></i>
+                    </button>
+                </div>
+            </div>
+        </article>
+
+        <article class="product-card">
+            <div class="product-image"></div>
+            <div class="product-info">
+                <h3 class="product-title">Producto</h3>
+                <p class="product-description">Descripción breve del producto</p>
+                <div class="product-footer">
+                    <span class="product-price">$00.00</span>
+                    <button class="product-btn">
+                        <i class="bi bi-cart-plus"></i>
+                    </button>
+                </div>
+            </div>
+        </article>
+
+        <!-- Duplica estas cards según necesites -->
+        
+    </div>
+</section>
 
     <footer>
         <p>&copy; Tema - Todos los derechos reservados.</p>
