tarjetas para los productos y estilo3

--- a/paginaprueva.html
+++ b/paginaprueva.html
@@ -54,103 +54,74 @@
     </header>
 
     <div class="container" style="display: flex; gap: 1rem; margin-top: 1.5rem;">
-        <aside>
-            <!-- Contenido opcional del aside -->
-        </aside>
+    <aside>
+        <!-- Contenido opcional del aside -->
+    </aside>
 
-        <main>
-                <section class="products">
-    <div class="products-grid">
-        <article class="product-card">
-            <div class="product-image"></div>
-            <div class="product-info">
-                <h3 class="product-title">Producto</h3>
-                <p class="product-description">Descripción breve del producto</p>
-                <div class="product-footer">
-                    <span class="product-price">$00.00</span>
-                    <button class="product-btn">
-                        <i class="bi bi-cart-plus"></i>
-                    </button>
-                </div>
+    <main>
+        <section class="products">
+            <div class="products-grid">
+
+                <article class="product-card">
+                    <div class="product-image"></div>
+                    <div class="product-info">
+                        <h3 class="product-title">Producto</h3>
+                        <p class="product-description">Descripción breve del producto</p>
+                        <div class="product-footer">
+                            <span class="product-price">$00.00</span>
+                            <button class="product-btn">
+                                <i class="bi bi-cart-plus"></i>
+                            </button>
+                        </div>
+                    </div>
+                </article>
+                
+                <article class="product-card">
+                    <div class="product-image"></div>
+                    <div class="product-info">
+                        <h3 class="product-title">Producto</h3>
+                        <p class="product-description">Descripción breve del producto</p>
+                        <div class="product-footer">
+                            <span class="product-price">$00.00</span>
+                            <button class="product-btn">
+                                <i class="bi bi-cart-plus"></i>
+                            </button>
+                        </div>
+                    </div>
+                </article>
+                <article class="product-card">
+                    <div class="product-image"></div>
+                    <div class="product-info">
+                        <h3 class="product-title">Producto</h3>
+                        <p class="product-description">Descripción breve del producto</p>
+                        <div class="product-footer">
+                            <span class="product-price">$00.00</span>
+                            <button class="product-btn">
+                                <i class="bi bi-cart-plus"></i>
+                            </button>
+                        </div>
+                    </div>
+                </article>
+                <article class="product-card">
+                    <div class="product-image"></div>
+                    <div class="product-info">
+                        <h3 class="product-title">Producto</h3>
+                        <p class="product-description">Descripción breve del producto</p>
+                        <div class="product-footer">
+                            <span class="product-price">$00.00</span>
+                            <button class="product-btn">
+                                <i class="bi bi-cart-plus"></i>
+                            </button>
+                        </div>
+                    </div>
+                </article>
+                <!-- más product-card aquí -->
+
             </div>
-        </article>
+        </section>
+    </main>
+</div>
 
-        <article class="product-card">
-            <div class="product-image"></div>
-            <div class="product-info">
-                <h3 class="product-title">Producto</h3>
-                <p class="product-description">Descripción breve del producto</p>
-                <div class="product-footer">
-                    <span class="product-price">$00.00</span>
-                    <button class="product-btn">
-                        <i class="bi bi-cart-plus"></i>
-                    </button>
-                </div>
-            </div>
-        </article>
-
-        <article class="product-card">
-            <div class="product-image"></div>
-            <div class="product-info">
-                <h3 class="product-title">Producto</h3>
-                <p class="product-description">Descripción breve del producto</p>
-                <div class="product-footer">
-                    <span class="product-price">$00.00</span>
-                    <button class="product-btn">
-                        <i class="bi bi-cart-plus"></i>
-                    </button>
-                </div>
-            </div>
-        </article>
-
-        <article class="product-card">
-            <div class="product-image"></div>
-            <div class="product-info">
-                <h3 class="product-title">Producto</h3>
-                <p class="product-description">Descripción breve del producto</p>
-                <div class="product-footer">
-                    <span class="product-price">$00.00</span>
-                    <button class="product-btn">
-                        <i class="bi bi-cart-plus"></i>
-                    </button>
-                </div>
-            </div>
-        </article>
-
-        <article class="product-card">
-            <div class="product-image"></div>
-            <div class="product-info">
-                <h3 class="product-title">Producto</h3>
-                <p class="product-description">Descripción breve del producto</p>
-                <div class="product-footer">
-                    <span class="product-price">$00.00</span>
-                    <button class="product-btn">
-                        <i class="bi bi-cart-plus"></i>
-                    </button>
-                </div>
-            </div>
-        </article>
-
-        <article class="product-card">
-            <div class="product-image"></div>
-            <div class="product-info">
-                <h3 class="product-title">Producto</h3>
-                <p class="product-description">Descripción breve del producto</p>
-                <div class="product-footer">
-                    <span class="product-price">$00.00</span>
-                    <button class="product-btn">
-                        <i class="bi bi-cart-plus"></i>
-                    </button>
-                </div>
-            </div>
-        </article>
-        </main>
-    </div>
-
-        <!-- Duplica estas cards según necesites -->
-        
-    </div>
-</section>
 
     <footer>
         <p>&copy; Tema - Todos los derechos reservados.</p>
