--- a/paginaprueva.html
+++ b/paginaprueva.html
@@ -5,16 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema</title>
 
-    <!-- CSS PRINCIPAL -->
     <link rel="stylesheet" href="estiloprueva.css">
-
-    <!-- FAVICON -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
-
-    <!-- Bootstrap ICONS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600&display=swap" rel="stylesheet">
@@ -23,96 +17,67 @@
 <body>
 
 <header class="header">
-    <div class="container header-container">
+    <div class="container header-flex">
         <div class="logo">
             <i class="bi bi-shop"></i>
             <span>Tema</span>
         </div>
 
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
-        <label for="menu-toggle" class="hamburger">
-            <i class="bi bi-list"></i>
-        </label>
+        <label for="menu-toggle" class="hamburger"><i class="bi bi-list"></i></label>
+                <!-- bi bi activa iconos externos -->
+                 <!-- "i" es el elemento contenedor de iconos -->
 
         <nav class="nav">
             <ul class="nav-list">
-                <li><a href="./paginaprueva.html"><i class="bi bi-house"></i><span>Inicio</span></a></li>
-                <li><a href="./pages/about.html"><i class="bi bi-person-raised-hand"></i><span>About</span></a></li>
-                <li><a href="./pages/login.html"><i class="bi bi-door-open"></i><span>Login</span></a></li>
-                <li><a href="./Inicio_sesion.html"><i class="bi bi-box-arrow-in-right"></i><span>SignUp</span></a></li>
+                <li><a href="./paginaprueva.html"><i class="bi bi-house"></i>Inicio</a></li>
+                <!-- bi bi activa iconos externos -->
+                 <!-- "i" es el elemento contenedor de iconos -->
+                <li><a href="./pages/about.html"><i class="bi bi-person-raised-hand"></i>About</a></li>
+                <!-- bi bi activa iconos externos -->
+                 <!-- "i" es el elemento contenedor de iconos -->
+                <li><a href="./pages/login.html"><i class="bi bi-door-open"></i>Login</a></li>
+                <!-- bi bi activa iconos externos -->
+                 <!-- "i" es el elemento contenedor de iconos -->
+                <li><a href="./Inicio_sesion.html"><i class="bi bi-box-arrow-in-right"></i>SignUp</a></li>
+                <!-- bi bi activa iconos externos -->
+                 <!-- "i" es el elemento contenedor de iconos -->
             </ul>
         </nav>
     </div>
 </header>
 
 <div class="container layout">
-    <aside class="sidebar">
-        <!-- Contenido opcional -->
-    </aside>
+    <aside class="sidebar"></aside>
 
     <main>
-        <section class="products">
-            <div class="products-grid">
+        <div class="products-grid">
 
-                <article class="product-card">
-                    <div class="product-image"></div>
-                    <div class="product-info">
-                        <h3 class="product-title">Producto</h3>
-                        <p class="product-description">Descripción breve del producto</p>
-                        <div class="product-footer">
-                            <span class="product-price">$00.00</span>
-                            <button class="product-btn">
-                                <i class="bi bi-cart-plus"></i>
-                            </button>
-                        </div>
+            <article class="product-card">
+                <div class="product-image"></div>
+                <div class="product-info">
+                    <h3 class="product-title">Producto</h3>
+                    <p class="product-description">Descripción breve del producto</p>
+                    <div class="product-footer">
+                        <span class="product-price">$00.00</span>
+                        <button class="product-btn"><i class="bi bi-cart-plus"></i></button>
                     </div>
-                </article>
+                </div>
+            </article>
 
-                <article class="product-card">
-                    <div class="product-image"></div>
-                    <div class="product-info">
-                        <h3 class="product-title">Producto</h3>
-                        <p class="product-description">Descripción breve del producto</p>
-                        <div class="product-footer">
-                            <span class="product-price">$00.00</span>
-                            <button class="product-btn">
-                                <i class="bi bi-cart-plus"></i>
-                            </button>
-                        </div>
+            <article class="product-card">
+                <div class="product-image"></div>
+                <div class="product-info">
+                    <h3 class="product-title">Producto</h3>
+                    <p class="product-description">Descripción breve del producto</p>
+                    <div class="product-footer">
+                        <span class="product-price">$00.00</span>
+                        <button class="product-btn"><i class="bi bi-cart-plus"></i></button>
                     </div>
-                </article>
+                </div>
+            </article>
 
-                <article class="product-card">
-                    <div class="product-image"></div>
-                    <div class="product-info">
-                        <h3 class="product-title">Producto</h3>
-                        <p class="product-description">Descripción breve del producto</p>
-                        <div class="product-footer">
-                            <span class="product-price">$00.00</span>
-                            <button class="product-btn">
-                                <i class="bi bi-cart-plus"></i>
-                            </button>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="product-card">
-                    <div class="product-image"></div>
-                    <div class="product-info">
-                        <h3 class="product-title">Producto</h3>
-                        <p class="product-description">Descripción breve del producto</p>
-                        <div class="product-footer">
-                            <span class="product-price">$00.00</span>
-                            <button class="product-btn">
-                                <i class="bi bi-cart-plus"></i>
-                            </button>
-                        </div>
-                    </div>
-                </article>
-                <!-- Más product-card aquí -->
-
-            </div>
-        </section>
+        </div>
     </main>
 </div>
 
