tarjetas para los productos y estilo8

--- a/paginaprueva.html
+++ b/paginaprueva.html
@@ -77,6 +77,65 @@
                 </div>
             </article>
 
+            <article class="product-card">
+                <div class="product-image"></div>
+                <div class="product-info">
+                    <h3 class="product-title">Producto</h3>
+                    <p class="product-description">Descripción breve del producto</p>
+                    <div class="product-footer">
+                        <span class="product-price">$00.00</span>
+                        <button class="product-btn"><i class="bi bi-cart-plus"></i></button>
+                    </div>
+                </div>
+            </article>
+
+            <article class="product-card">
+                <div class="product-image"></div>
+                <div class="product-info">
+                    <h3 class="product-title">Producto</h3>
+                    <p class="product-description">Descripción breve del producto</p>
+                    <div class="product-footer">
+                        <span class="product-price">$00.00</span>
+                        <button class="product-btn"><i class="bi bi-cart-plus"></i></button>
+                    </div>
+                </div>
+            </article>
+            
+<article class="product-card">
+                <div class="product-image"></div>
+                <div class="product-info">
+                    <h3 class="product-title">Producto</h3>
+                    <p class="product-description">Descripción breve del producto</p>
+                    <div class="product-footer">
+                        <span class="product-price">$00.00</span>
+                        <button class="product-btn"><i class="bi bi-cart-plus"></i></button>
+                    </div>
+                </div>
+            </article>
+
+            <article class="product-card">
+                <div class="product-image"></div>
+                <div class="product-info">
+                    <h3 class="product-title">Producto</h3>
+                    <p class="product-description">Descripción breve del producto</p>
+                    <div class="product-footer">
+                        <span class="product-price">$00.00</span>
+                        <button class="product-btn"><i class="bi bi-cart-plus"></i></button>
+                    </div>
+                </div>
+            </article>
+
+            <article class="product-card">
+                <div class="product-image"></div>
+                <div class="product-info">
+                    <h3 class="product-title">Producto</h3>
+                    <p class="product-description">Descripción breve del producto</p>
+                    <div class="product-footer">
+                        <span class="product-price">$00.00</span>
+                        <button class="product-btn"><i class="bi bi-cart-plus"></i></button>
+                    </div>
+                </div>
+            </article>
         </div>
     </main>
 </div>
