--- a/Inicio_sesion.html
+++ b/Inicio_sesion.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 
-<h1>Iniciar Sesión</h1>
+<h1>Iniciar sesión/Registrarse</h1>
 <form method="POST" action="https://ejercicio.2.6.3.com/login">
+    
+    <h2> <img src="https://media.istockphoto.com/id/1450076518/es/vector/icono-de-candado-verde-aislado-sobre-fondo-blanco-bloqueo-de-se%C3%B1al-de-s%C3%ADmbolo-ilustraci%C3%B3n.jpg?s=612x612&w=0&k=20&c=ZXxyvEjgHE9SnmBVJdyR_OkzGG-X7EUmITjZCkbFdAE=" alt="candado"> Todos los datos están protegidos </h2>
     <label>
         Nombre de usuario:<br>
         <input type="text" name="usuario" required>
@@ -21,6 +23,7 @@
         <input type="password" name="contrasena" required>
     </label>
     <br>
+
     <label>
         <input type="checkbox" name="recordar">
         Recordar
@@ -29,7 +32,10 @@
 
 
     <button type="submit">Iniciar Sesion</button>
+
 </form>
+
+    <img src="imagenes/logo.png" alt="Logo_Inicio">
 </body>
 </html>
 
