--- a/politicagallesasprueva1.html
+++ b/politicagallesasprueva1.html
@@ -99,8 +99,8 @@
 <footer>
     <p>&copy; Tema - Todos los derechos reservados.</p>
     <nav>
-        <a href="./pages/aviso-legal.html">Privacidad</a> | 
-        <a href="./cookies.html">Cookies</a>
+        <a href="aviso_legal.html">Privacidad</a> | 
+       
     </nav>
 </footer>
 
