--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Política de Cookies - Tema</title>
+    <title>Nosotros - Tema</title>
 
     <link rel="stylesheet" href="estiloprueva.css">
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
@@ -44,48 +44,48 @@
 
     <!-- ASIDE (opcional) -->
     <aside class="sidebar">
-        <h3>Política de Cookies</h3>
-        <p>Información sobre el uso de cookies en esta web.</p>
+        <h3>Información</h3>
+        <p>Conoce más sobre nuestra tienda, misión y valores.</p>
     </aside>
 
     <!-- MAIN -->
     <main>
 
+        <!-- SECCIÓN PRINCIPAL -->
         <div class="products-grid">
 
-            <!-- TARJETA 1 -->
-            <article class="product-card">
-                <div class="product-image" style="background: linear-gradient(135deg, #ffe6cc, #ffcc99);"></div>
-                <div class="product-info">
-                    <h3 class="product-title">¿Qué son las cookies?</h3>
-                    <p class="product-description">
-                        Las cookies son pequeños archivos que los sitios web almacenan en tu navegador para recordar
-                        información sobre tu visita. Pueden servir para mantener sesiones, guardar preferencias o
-                        analizar el uso de la página.
-                    </p>
-                </div>
-            </article>
-
-            <!-- TARJETA 2 -->
+            <!-- TARJETA 1: QUIÉNES SOMOS -->
             <article class="product-card">
                 <div class="product-image" style="background: linear-gradient(135deg, #cce7ff, #99d0ff);"></div>
                 <div class="product-info">
-                    <h3 class="product-title">Uso de cookies en esta web</h3>
+                    <h3 class="product-title">Quiénes Somos</h3>
                     <p class="product-description">
-                        Esta página forma parte de un proyecto alojado en GitHub Pages y <strong>no utiliza cookies propias</strong>.
-                        No se recopila, almacena ni procesa ningún tipo de dato personal del usuario.
+                        Somos Tema, una tienda online dedicada a ofrecer productos de calidad al mejor precio.
+                        Nuestro objetivo es brindar una experiencia de compra rápida, segura y accesible para todos.
                     </p>
                 </div>
             </article>
 
-            <!-- TARJETA 3 -->
+            <!-- TARJETA 2: NUESTRA MISIÓN -->
+            <article class="product-card">
+                <div class="product-image" style="background: linear-gradient(135deg, #ffe6cc, #ffcc99);"></div>
+                <div class="product-info">
+                    <h3 class="product-title">Nuestra Misión</h3>
+                    <p class="product-description">
+                        Trabajamos para acercar productos innovadores a nuestros clientes, manteniendo siempre
+                        precios competitivos y un servicio de atención cercano y eficiente.
+                    </p>
+                </div>
+            </article>
+
+            <!-- TARJETA 3: POR QUÉ ELEGIRNOS -->
             <article class="product-card">
                 <div class="product-image" style="background: linear-gradient(135deg, #e6ffcc, #ccff99);"></div>
                 <div class="product-info">
-                    <h3 class="product-title">Cookies de terceros</h3>
+                    <h3 class="product-title">Por Qué Elegirnos</h3>
                     <p class="product-description">
-                        GitHub Pages puede utilizar cookies técnicas necesarias para el funcionamiento del servicio.
-                        Estas cookies no recopilan información personal y no pueden desactivarse desde esta web.
+                        Ofrecemos envíos rápidos, soporte 24/7, garantía de satisfacción y una selección de productos
+                        cuidadosamente elegidos para ti.
                     </p>
                 </div>
             </article>
@@ -99,8 +99,8 @@
 <footer>
     <p>&copy; Tema - Todos los derechos reservados.</p>
     <nav>
-        <a href="aviso_legal.html">Privacidad</a>  
-       
+        <a href="aviso_legal.html">Privacidad</a> | 
+        <a href="cookies.html">Cookies</a>
     </nav>
 </footer>
 
