--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <ul class="nav-list">
 
                 <!-- Cada enlace tiene un icono + texto -->
-                <li><a href="./paginaprueva.html"><i class="bi bi-house"></i>Inicio</a></li>
-                <li><a href="./pages/about.html"><i class="bi bi-person-raised-hand"></i>About</a></li>
-                <li><a href="./pages/login.html"><i class="bi bi-door-open"></i>Login</a></li>
-                <li><a href="./Inicio_sesion.html"><i class="bi bi-box-arrow-in-right"></i>SignUp</a></li>
+                <li><a href="index.html"><i class="bi bi-house"></i>Inicio</a></li>
+                <li><a href="about.html"><i class="bi bi-person-raised-hand"></i>About</a></li>
+                <li><a href="Inicio_sesion.html"><i class="bi bi-door-open"></i>Login/Registrarse</a></li>
+                
 
             </ul>
         </nav>
@@ -110,5 +110,5 @@
     </nav>
 </footer>
 
-</body>0
+</body>
 </html>
