--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
     <!-- Enlaces legales -->
     <nav>
-        <a href="./pages/aviso-legal.html">Privacidad</a> | 
-        <a href="./pages/cookies.html">Cookies</a>
+        <a href="aviso_legal.html">Privacidad</a> | 
+        <a href="cookies.html">Cookies</a>
     </nav>
 </footer>
 
