--- a/about.html
+++ b/about.html
@@ -29,11 +29,9 @@
 
         <nav class="nav">
             <ul class="nav-list">
-                <li><a href="./paginaprueva.html"><i class="bi bi-house"></i>Inicio</a></li>
-                <li><a href="./nosotros.html"><i class="bi bi-people"></i>Nosotros</a></li>
-                <li><a href="./pages/about.html"><i class="bi bi-info-circle"></i>About</a></li>
-                <li><a href="./pages/login.html"><i class="bi bi-door-open"></i>Login</a></li>
-                <li><a href="./Inicio_sesion.html"><i class="bi bi-box-arrow-in-right"></i>SignUp</a></li>
+                <li><a href="index.html"><i class="bi bi-house"></i>Inicio</a></li>
+                <li><a href="Inicio_sesion.html"><i class="bi bi-door-open"></i>Login/Registrarse</a></li>
+                
             </ul>
         </nav>
     </div>
@@ -42,12 +40,7 @@
 <!-- CONTENIDO PRINCIPAL -->
 <div class="container layout">
 
-    <!-- ASIDE (opcional) -->
-    <aside class="sidebar">
-        <h3>Información</h3>
-        <p>Conoce más sobre nuestra tienda, misión y valores.</p>
-    </aside>
-
+    
     <!-- MAIN -->
     <main>
 
