--- a/cookies.html
+++ b/cookies.html
@@ -29,11 +29,9 @@
 
         <nav class="nav">
             <ul class="nav-list">
-                <li><a href="./paginaprueva.html"><i class="bi bi-house"></i>Inicio</a></li>
-                <li><a href="./nosotros.html"><i class="bi bi-people"></i>Nosotros</a></li>
-                <li><a href="./pages/about.html"><i class="bi bi-info-circle"></i>About</a></li>
-                <li><a href="./pages/login.html"><i class="bi bi-door-open"></i>Login</a></li>
-                <li><a href="./Inicio_sesion.html"><i class="bi bi-box-arrow-in-right"></i>SignUp</a></li>
+                <li><a href="index.html"><i class="bi bi-house"></i>Inicio</a></li>
+                <li><a href="about.html"><i class="bi bi-info-circle"></i>About</a></li>
+                <li><a href="Inicio_sesion.html"><i class="bi bi-box-arrow-in-right"></i>Login/Registrarse</a></li>
             </ul>
         </nav>
     </div>
