--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <!-- Checkbox oculto que controla el menú móvil -->
-        <input type="checkbox"  class="menu-toggle">
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
 
         <!-- Botón hamburguesa (solo visible en móvil) -->
         <label for="menu-toggle" class="hamburger">
