--- a/Inicio_sesion.html
+++ b/Inicio_sesion.html
@@ -9,8 +9,17 @@
 
 <h1>Iniciar sesión/Registrarse</h1>
 <form method="POST" action="https://ejercicio.2.6.3.com/login">
-    
-    <h2> <img src="https://media.istockphoto.com/id/1450076518/es/vector/icono-de-candado-verde-aislado-sobre-fondo-blanco-bloqueo-de-se%C3%B1al-de-s%C3%ADmbolo-ilustraci%C3%B3n.jpg?s=612x612&w=0&k=20&c=ZXxyvEjgHE9SnmBVJdyR_OkzGG-X7EUmITjZCkbFdAE=" alt="candado"> Todos los datos están protegidos </h2>
+
+    <table>
+        <tr>
+            <td>
+                <img class='img_candado' src="https://us.123rf.com/450wm/123vector/123vector1709/123vector170900251/86132604-illustration-of-green-circle-padlock-icon.jpg" alt="Candado">
+            </td>
+            <td>
+                <h2>Todos los datos están protegidos </h2>  
+            </td>
+        </tr>
+    </table>
     <label>
         Nombre de usuario:<br>
         <input type="text" name="usuario" required>
@@ -32,10 +41,13 @@
 
 
     <button type="submit">Iniciar Sesion</button>
+    <br><br>
 
+    <a class= "comeback" href="index.html">Volver</a>
+   
 </form>
 
-    <img src="imagenes/logo.png" alt="Logo_Inicio">
+    <img class='img_logo' src="imagenes/logo.png" alt="Logo_Inicio">
 </body>
 </html>
 
