--- a/aviso_legal.html
+++ b/aviso_legal.html
@@ -29,11 +29,9 @@
 
         <nav class="nav">
             <ul class="nav-list">
-                <li><a href="./paginaprueva.html"><i class="bi bi-house"></i>Inicio</a></li>
-                <li><a href="./nosotros.html"><i class="bi bi-people"></i>Nosotros</a></li>
-                <li><a href="./pages/about.html"><i class="bi bi-info-circle"></i>About</a></li>
-                <li><a href="./pages/login.html"><i class="bi bi-door-open"></i>Login</a></li>
-                <li><a href="./Inicio_sesion.html"><i class="bi bi-box-arrow-in-right"></i>SignUp</a></li>
+                <li><a href="index.html"><i class="bi bi-house"></i>Inicio</a></li>
+                <li><a href="about.html"><i class="bi bi-people"></i>Nosotros</a></li>
+                <li><a href="Inicio_sesion.html"><i class="bi bi-door-open"></i>Login/Registro</a></li>
             </ul>
         </nav>
     </div>
@@ -42,11 +40,6 @@
 <!-- CONTENIDO PRINCIPAL -->
 <div class="container layout">
 
-    <!-- ASIDE -->
-    <aside class="sidebar">
-        <h3>Aviso Legal</h3>
-        <p>Información legal sobre el uso de esta página web.</p>
-    </aside>
 
     <!-- MAIN -->
     <main>
@@ -123,7 +116,7 @@
 <footer>
     <p>&copy; Tema - Todos los derechos reservados.</p>
     <nav>
-        <a href="./aviso_legal.html">Privacidad</a> | 
+        
         <a href="./cookies.html">Cookies</a>
     </nav>
 </footer>
