--- a/index.html
+++ b/index.html
@@ -74,7 +74,23 @@
         <div class="products-grid">
 
             <!-- Tarjeta de producto -->
-            <article class="product-card">
+            <article class="product-card"><img src="https://img.kwcdn.com/product/open/f119aa3502d84738b16536f25a0c8d38-goods.jpeg?imageView2/
+2/w/800/q/70/format/avif" alt="Libro coleccion">
+                <div class="product-image"></div> <!-- Imagen o placeholder -->
+                <div class="product-info">
+                    <h3 class="product-title">Producto</h3>
+                    <p class="product-description">Descripción breve del producto</p>
+
+                    <!-- Pie de la tarjeta -->
+                    <div class="product-footer">
+                        <span class="product-price">$00.00</span>
+                        <button class="product-btn">
+                            <i class="bi bi-cart-plus"></i> <!-- Icono de carrito -->
+                        </button>
+                    </div>
+                </div>
+            </article>
+            <article class="product-card"><img src="https://img.kwcdn.com/product/open/fea0fc10aed84c169b075dcad0b46fde-goods.jpeg?imageView2/2/w/800/q/70/format/avif" alt="Libro coleccion">
                 <div class="product-image"></div> <!-- Imagen o placeholder -->
                 <div class="product-info">
                     <h3 class="product-title">Producto</h3>
