indice arreglado, capullos

--- a/Inicio_sesion.html
+++ b/Inicio_sesion.html
@@ -40,7 +40,7 @@
     <br><br>
 
 
-    <button type="submit">Iniciar Sesion</button>
+    <button type="submit">Iniciar sesión/Registrarse</button>
     <br><br>
 
     <a class= "comeback" href="index.html">Volver</a>
