--- a/Inicio_sesion.html
+++ b/Inicio_sesion.html
@@ -8,7 +8,7 @@
 <body>
 
 <h1>Iniciar sesión/Registrarse</h1>
-<form method="POST" action="https://ejercicio.2.6.3.com/login">
+<form method="POST" action="#">
 
     <table>
         <tr>
