--- a/cookies.html
+++ b/cookies.html
@@ -20,8 +20,7 @@
 <header class="header">
     <div class="container header-flex">
         <div class="logo">
-            <i class="bi bi-shop"></i>
-            <span>Tema</span>
+         <img class='img' src="imagenes/logo.png" alt="Logo_Inicio">
         </div>
 
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
