--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 " alt=""> <!-- Imagen o placeholder -->
                 <div class="product-info">
                     <h3 class="product-title">Delantal Mariscos Recio</h3>
-                    <p class="product-description">Si quieres tener el mismo humor que el mismisimo Antonio Recio este es el delantal perfecto. </p>
+                    <p class="product-description">Si quieres tener el mismo humor que el mismísimo Antonio Recio este es el delantal perfecto. </p>
 
                     <!-- Pie de la tarjeta -->
                     <div class="product-footer">
