--- a/cookies.html
+++ b/cookies.html
@@ -29,7 +29,7 @@
         <nav class="nav">
             <ul class="nav-list">
                 <li><a href="index.html"><i class="bi bi-house"></i>Inicio</a></li>
-                <li><a href="about.html"><i class="bi bi-info-circle"></i>About</a></li>
+                <li><a href="about.html"><i class="bi bi-person-raised-hand"></i>About</a></li>
                 <li><a href="Inicio_sesion.html"><i class="bi bi-box-arrow-in-right"></i>Login/Registrarse</a></li>
             </ul>
         </nav>
