indice arreglado, capullos

--- a/index.html
+++ b/index.html
@@ -159,6 +159,21 @@
                 </div>
             </article>
             
+            <article class="product-card">
+                 <img class="product-image" src="https://img.kwcdn.com/product/fancy/b1583427-9210-4789-88f0-83e3eb227457.jpg?imageView2/2/w/800/q/70/format/avif" alt=""> <!-- Imagen o placeholder -->
+                <div class="product-info">
+                    <h3 class="product-title">Mascara de Donald Trump</h3>
+                    <p class="product-description">Si quieres hacer un atraco bien organizado y sin ningun tipo de cargos futuros, utiliza esta mascara para estar respaldado por la ley..</p>
+
+                    <!-- Pie de la tarjeta -->
+                    <div class="product-footer">
+                        <span class="product-price">$167.67.00</span>
+                        <button class="product-btn">
+                            <i class="bi bi-cart-plus"></i> <!-- Icono de carrito -->
+                        </button>
+                    </div>
+                </div>
+            </article>
             <!-- (Las demás tarjetas son iguales) -->
 
         </div>
