--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 <!-- ==============================
      FOOTER
 ============================== -->
+<div class="fo">
 <footer>
     <p>&copy; Tema - Todos los derechos reservados.</p>
     <nav>
@@ -144,6 +145,7 @@
         <a href="cookies.html">Cookies</a>
     </nav>
 </footer>
+</div>
 
 </body>
 </html>
