--- a/Inicio_sesion.html
+++ b/Inicio_sesion.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1>Iniciar sesión/Registrarse</h1>
+<h1>Iniciar sesión</h1>
 <form method="POST" action="#">
 
     <table>
@@ -40,7 +40,7 @@
     <br><br>
 
 
-    <button type="submit">Iniciar sesión/Registrarse</button>
+    <button  style="font-size: 25px;" type="submit">Iniciar sesión</button>
     <br><br>
 
     <a class= "comeback" href="index.html">Volver</a>
