--- a/Registro.html
+++ b/Registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio de Sesión</title>
-    <link rel="stylesheet" href="Inicio_sesion.css">
+    <link rel="stylesheet" href="Registro.css">
 </head>
 <body>
 
@@ -35,13 +35,13 @@
 
 <label class="campo">
     Contraseña:<br>
-    <input type="password" name="contrasena" required>
+    <input  type="password" name="contrasena" required>
 </label>
 <br>
 
 <label class="campo">
     Correo electrónico:<br>
-    <input type="password" name="contrasena" required>
+    <input type="" name="contrasena" required>
 </label>
 <br>
 
@@ -57,7 +57,7 @@
     </label>
 
     
-    <button type="submit">Registrarse</button>
+    <button type="submit" style="font-size:25px; background-color:rgb(0, 149, 255) ;">Registrarse</button>
     <br>
 
     <a class="comeback" href="index.html">Volver</a>
