--- a/Registro.html
+++ b/Registro.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Inicio de Sesión</title>
+    <title>Registro</title>
     <link rel="stylesheet" href="Registro.css">
 </head>
 <body>
@@ -41,26 +41,28 @@
 
 <label class="campo">
     Correo electrónico:<br>
-    <input type="" name="contrasena" required>
+    <input type="correo" name="Correo" required>
 </label>
 <br>
 
 <label class="campo">
     Teléfono:<br>
-    <input type="password" name="contrasena" required>
+    <input type="tel" name="telefono" required>
 </label>
 <br>
 
     <label class="terms">
-        <input type="checkbox" required>
+    <input type="checkbox" required>
         Acepto los términos y condiciones
     </label>
+    <br><br>
 
     
-    <button type="submit" style="font-size:25px; background-color:rgb(0, 149, 255) ;">Registrarse</button>
+    <button type="submit">Registrarse</button>
     <br>
 
     <a class="comeback" href="index.html">Volver</a>
+    <br><br><br>
    
     
 </form>
