--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
         <nav class="nav">
             <ul class="nav-list">
                 <li><a href="index.html"><i class="bi bi-house"></i>Inicio</a></li>
-                <li><a href="Inicio_sesion.html"><i class="bi bi-door-open"></i>Login/Registrarse</a></li>
-                
+                <li><a href="Inicio_sesion.html"><i class="bi bi-door-open"></i>Login</a></li>
+                <li><a href="Registro.html"><i class="bi bi-door-open"></i>Registrarse</a></li>
             </ul>
         </nav>
     </div>
