--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <ul class="nav-list">
                 <li><a href="index.html"><i class="bi bi-house"></i>Inicio</a></li>
                 <li><a href="about.html"><i class="bi bi-person-raised-hand"></i>About</a></li>
-                <li><a href="Inicio_sesion.html"><i class="bi bi-door-open"></i>Login / Registrarse</a></li>
+               <li><a href="Inicio_sesion.html"><i class="bi bi-door-open"></i>Login</a></li>
+                <li><a href="Registro.html"><i class="bi bi-door-open"></i>Registrarse</a></li>
             </ul>
         </nav>
 
